<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity"
        android:background="@drawable/background">


    <Button
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="400dp"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/button"
            android:background="@drawable/border"
            android:textColor="#ffff" app:layout_constraintVertical_bias="0.459"/>
    <EditText
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:inputType="textPersonName"
            android:text="@string/username"
            android:ems="10"
            android:background="#ffffff"
            tools:layout_editor_absoluteX="99dp"
            android:id="@+id/editText2"
            android:labelFor="@id/editText2"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/editText"/>
    <EditText
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:inputType="textPassword"
            android:text="@string/password"
            android:ems="10"
            android:background="#ffffff"
            android:id="@+id/editText"
            android:labelFor="@id/editText"
            android:layout_marginBottom="92dp"
            app:layout_constraintBottom_toTopOf="@+id/button"/>
    <ImageView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/descLogo"
            android:layout_width="359dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="26dp" android:id="@+id/imageView" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/editText2"/>
</android.support.constraint.ConstraintLayout>