<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:background="@drawable/shadow_card_message"
>

    <ImageView
            android:layout_marginTop="4dp"
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@drawable/maximilien_pegasus" android:id="@+id/imageView8"
            android:layout_weight="1" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="4dp"
            android:contentDescription="@string/avatar"/>
    <TextView
            android:id="@+id/title"
            android:text="@string/nom_personne"
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView8"/>
    <TextView
            android:text="@string/last_message"
            android:layout_width="341dp"
            android:textSize="15sp"
            android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_weight="1"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title" app:layout_constraintStart_toEndOf="@+id/imageView8"
            android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>